lib/parser_old.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(program) { return program; },
        peg$c1 = function(body) {
              return {
               type: "Program",
               body: optionalList(body)
              };
           },
        peg$c2 = function(first, rest) {
              return buildList(first, rest, 1);
            },
        peg$c3 = ",",
        peg$c4 = peg$literalExpectation(",", false),
        peg$c5 = function(head, tail) {
               var result = [head];
               for (var i = 0; i < tail.length; i++) {
                  result.push(tail[i][3]);
               }
               return result;
            },
        peg$c6 = function(type, name) {
               return {
                  type: "Identifier",
                  name: name['name']
               }
            },
        peg$c7 = "veiksmas",
        peg$c8 = peg$literalExpectation("veiksmas", false),
        peg$c9 = "(",
        peg$c10 = peg$literalExpectation("(", false),
        peg$c11 = ")",
        peg$c12 = peg$literalExpectation(")", false),
        peg$c13 = "{",
        peg$c14 = peg$literalExpectation("{", false),
        peg$c15 = "}",
        peg$c16 = peg$literalExpectation("}", false),
        peg$c17 = function(id, params, body) {
        		return {
        			type: "FunctionDeclaration",
        			id: id,
        			params: optionalList(params),
        			body: optionalList(body)
        	}
        	},
        peg$c18 = function(body) {
              return {
                type: "BlockStatement",
                body: optionalList(body)
              };
            },
        peg$c19 = /^[ (]/,
        peg$c20 = peg$classExpectation([" ", "("], false, false),
        peg$c21 = /^[_A-Za-z]/,
        peg$c22 = peg$classExpectation(["_", ["A", "Z"], ["a", "z"]], false, false),
        peg$c23 = /^[_A-Za-z0-9]/,
        peg$c24 = peg$classExpectation(["_", ["A", "Z"], ["a", "z"], ["0", "9"]], false, false),
        peg$c25 = function(beginning, rest) {
              return {
        		  type: "Identifier",
        		  name: beginning+rest.join("")
        	  }
            },
        peg$c26 = function(expression) {
        		return expression;
        	},
        peg$c27 = "priskirti",
        peg$c28 = peg$literalExpectation("priskirti", false),
        peg$c29 = function(expression) { return expression; },
        peg$c30 = "sveikasis",
        peg$c31 = peg$literalExpectation("sveikasis", false),
        peg$c32 = "arTiesa",
        peg$c33 = peg$literalExpectation("arTiesa", false),
        peg$c34 = peg$otherExpectation("whitespace"),
        peg$c35 = "\t",
        peg$c36 = peg$literalExpectation("\t", false),
        peg$c37 = "\x0B",
        peg$c38 = peg$literalExpectation("\x0B", false),
        peg$c39 = "\f",
        peg$c40 = peg$literalExpectation("\f", false),
        peg$c41 = " ",
        peg$c42 = peg$literalExpectation(" ", false),
        peg$c43 = "\xA0",
        peg$c44 = peg$literalExpectation("\xA0", false),
        peg$c45 = "\uFEFF",
        peg$c46 = peg$literalExpectation("\uFEFF", false),
        peg$c47 = /^[\n\r\u2028\u2029]/,
        peg$c48 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
        peg$c49 = peg$otherExpectation("end of line"),
        peg$c50 = "\n",
        peg$c51 = peg$literalExpectation("\n", false),
        peg$c52 = "\r\n",
        peg$c53 = peg$literalExpectation("\r\n", false),
        peg$c54 = "\r",
        peg$c55 = peg$literalExpectation("\r", false),
        peg$c56 = "\u2028",
        peg$c57 = peg$literalExpectation("\u2028", false),
        peg$c58 = "\u2029",
        peg$c59 = peg$literalExpectation("\u2029", false),
        peg$c60 = ";",
        peg$c61 = peg$literalExpectation(";", false),
        peg$c62 = "dauginti",
        peg$c63 = peg$literalExpectation("dauginti", false),
        peg$c64 = "lygu",
        peg$c65 = peg$literalExpectation("lygu", false),
        peg$c66 = "dalinti",
        peg$c67 = peg$literalExpectation("dalinti", false),
        peg$c68 = "sud\u0117ti",
        peg$c69 = peg$literalExpectation("sud\u0117ti", false),
        peg$c70 = "atimti",
        peg$c71 = peg$literalExpectation("atimti", false),
        peg$c72 = "daugiau",
        peg$c73 = peg$literalExpectation("daugiau", false),
        peg$c74 = "ma\u017Eiau",
        peg$c75 = peg$literalExpectation("ma\u017Eiau", false),
        peg$c76 = "ne",
        peg$c77 = peg$literalExpectation("ne", false),
        peg$c78 = "gr\u0105\u017Eink",
        peg$c79 = peg$literalExpectation("gr\u0105\u017Eink", false),
        peg$c80 = "kol",
        peg$c81 = peg$literalExpectation("kol", false),
        peg$c82 = "jeigu",
        peg$c83 = peg$literalExpectation("jeigu", false),
        peg$c84 = peg$anyExpectation(),
        peg$c85 = peg$otherExpectation("arTiesa"),
        peg$c86 = "tiesa",
        peg$c87 = peg$literalExpectation("tiesa", false),
        peg$c88 = function() {
        		return {
        			type: "Literal",
        			value: true
        		}
        	},
        peg$c89 = "melas",
        peg$c90 = peg$literalExpectation("melas", false),
        peg$c91 = function() {
        		return {
        			type: "Literal",
        			value: false
        		}
        	},
        peg$c92 = peg$otherExpectation("sveikasis"),
        peg$c93 = /^[1-9]/,
        peg$c94 = peg$classExpectation([["1", "9"]], false, false),
        peg$c95 = /^[0-9]/,
        peg$c96 = peg$classExpectation([["0", "9"]], false, false),
        peg$c97 = ".",
        peg$c98 = peg$literalExpectation(".", false),
        peg$c99 = function(first, val) {
        		return {
        			type: "Literal",
        			value: Number(first+val.join(""))
        		}
        	},
        peg$c100 = /^[0]/,
        peg$c101 = peg$classExpectation(["0"], false, false),
        peg$c102 = function(first) {
        		return {
        			type: "Literal",
        			value: Number(first)
        		}
        	},
        peg$c103 = function(left, operator, right) {
        		  return {
          			type: "BinaryExpression",
          			operator: convertFromLietuviskasToJS(operator),
          			left: left,
          			right: right
        		  }
        	  },
        peg$c104 = "[",
        peg$c105 = peg$literalExpectation("[", false),
        peg$c106 = "]",
        peg$c107 = peg$literalExpectation("]", false),
        peg$c108 = function(id, index) {
        		return {
        			type: "MemberExpression",
        			object: id,
        			property: index,
        			computed: true
        		}	
        	},
        peg$c109 = function(id, params) {
        	 return {
        		 type: "CallExpression",
        		 callee: id,
        		 arguments: optionalList(params)
        	 }
         },
        peg$c110 = function(id, init) {
        		return {
        			type: "AssignmentExpression",
        			operator: "priskirti",
        			left: id,
        			right: extractOptional(init, 1)
        		};
        	},
        peg$c111 = function(id, init) {
          		return {
          			type: "AssignmentExpression",
        			operator: "priskirti",
          			left: id,
          			right: extractOptional(init, 1)
          		};
        	  },
        peg$c112 = function(id, init) {
              return {
              type:         "VariableDeclaration",
              declarations: [{
        			type: "VariableDeclarator",
        			id: id,
        			init: extractOptional(init, 1)
        		}],
        	  kind: "var"
              };
            },
        peg$c113 = function(t, id, init) {
              return {
              type:         "VariableDeclaration",
              declarations: [{
        			type: "VariableDeclarator",
        			id: id,
        			init: extractOptional(init, 1)
        		}],
        	  kind: "var"
              };
            },
        peg$c114 = function(expression) {
        		return {
        			type: "ExpressionStatement",
        			expression: expression
        		};
        	},
        peg$c115 = function(expression) {
          		return {
          			type: "ExpressionStatement",
        			expression: expression
          		};
        	  },
        peg$c116 = function(expression) {
        		return {
        			type: "ExpressionStatement",
        			expression: expression
        		}
        	},
        peg$c117 = "kitaip",
        peg$c118 = peg$literalExpectation("kitaip", false),
        peg$c119 = function(test, consequent, alternate) {
              return {
                type:       "IfStatement",
                test:       test,
                consequent: consequent,
                alternate:  alternate
              };
            },
        peg$c120 = function(test, consequent) {
              return {
                type:       "IfStatement",
                test:       test,
                consequent: consequent,
                alternate:  null
              };
            },
        peg$c121 = function(test, body) {
              return {
                type: "WhileStatement",
                test: test,
                body: body
              };
            },
        peg$c122 = function(expression) {
        		return {
        			type: "ReturnStatement",
        			argument: expression
        		}
        	},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseProgram();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseProgram() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseSourceElements();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseSourceElements() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseSourceElement();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseSourceElement();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseSourceElement();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFunctionParameterList() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseFunctionParameter();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c3;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseFunctionParameter();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c3;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseFunctionParameter();
                if (s7 !== peg$FAILED) {
                  s4 = [s4, s5, s6, s7];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFunctionParameter() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFunctionDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 40) {
                s5 = peg$c9;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseFunctionParameterList();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 41) {
                        s9 = peg$c11;
                        peg$currPos++;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c12); }
                      }
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parse__();
                        if (s10 !== peg$FAILED) {
                          if (input.charCodeAt(peg$currPos) === 123) {
                            s11 = peg$c13;
                            peg$currPos++;
                          } else {
                            s11 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c14); }
                          }
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parse__();
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parseFunctionBody();
                              if (s13 !== peg$FAILED) {
                                s14 = peg$parse__();
                                if (s14 !== peg$FAILED) {
                                  if (input.charCodeAt(peg$currPos) === 125) {
                                    s15 = peg$c15;
                                    peg$currPos++;
                                  } else {
                                    s15 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c16); }
                                  }
                                  if (s15 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c17(s3, s7, s13);
                                    s0 = s1;
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFunctionBody() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseSourceElements();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c18(s1);
      }
      s0 = s1;

      return s0;
    }
